Ms visualizer bug fixes (#796)
* Fix off-center icon in firefox

* Fix image sizes used by visualizer

* Prevent double clicking through divs for visualizer album art

* Fix some bugs

--- a/packages/web/src/components/nav/desktop/CurrentlyPlaying.module.css
+++ b/packages/web/src/components/nav/desktop/CurrentlyPlaying.module.css
@@ -32,17 +32,18 @@
 }
 
 .bottomRightContainer {
-  position: absolute;
-  bottom: 0;
-  right: 0;
-  width: 50px;
-  height: 50px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  width: 100%;
+  height: 100%;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 10px;
 }
 
 .visualizerIconContainer {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   padding: 5px;
   background-color: var(--static-white);
   border-radius: 50%;
